# backend/src/routes/auth.routes.ts
@@ -5,6 +5,8 @@ import {
   logout,
   me,
   deleteUser,
+  refresh,
+  completeOnboarding,
 } from "../controllers/auth.controller";
 import { authMiddleware } from "../middleware/auth.middleware";
 import { asyncHandler } from "../utils/async-handler";
@@ -16,5 +18,7 @@ router.post("/login", asyncHandler(login));
 router.post("/logout", authMiddleware, asyncHandler(logout));
 router.get("/me", authMiddleware, asyncHandler(me));
 router.delete("/delete", authMiddleware, asyncHandler(deleteUser));
+router.post("/auth/refresh", asyncHandler(refresh));
+router.patch("/onboarding", authMiddleware, asyncHandler(completeOnboarding));
 
 export default router;
